--- a/src/main/resources/mails.properties
+++ b/src/main/resources/mails.properties
@@ -82,9 +82,11 @@ mailService.uploadedSubmissionMailBody=Dear {0}\n\n\
   - <a href='https://www.odcf.dkfz.de/faq/index'>FAQ</a>\n\n\
   Please feel free to contact us with any questions, suggestions or feedback.\n\n\
   Kind regards,\nODCF Team
-mailService.uploadedSubmissionFailedMailBody=Dear {0}\n\n\
-  We could not upload your submission because of the reason ({1}). \
-  Please try uploading it again. If the problem occurs again, please contact us by replying to this email.\n\n\
+mailService.uploadedSubmissionFailedMailSubject={0} Failed to transfer metadata table to ODCF validation service
+mailService.uploadedSubmissionFailedMailBody=Dear {0},\n\n\
+  We have encountered an issue ({1}) while trying to upload your submission. \
+  Before attempting to upload it again, please take a moment to address the error. \
+  If the problem persists, feel free to contact us for further assistance by replying to this email.\n\n\
   Kind regards,\nODCF Team
 mailService.fasttrackSubject=Fasttrack submission found
 mailService.fasttrackBody=Submission {0} belonging to the project(s) {1} is marked as fasttrack. The notifications in OTP should be turned off.
